--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   uuid: 2.2.2
+  shimmer:
+    git: https://github.com/hnvn/flutter_shimmer
   flutter_svg: ^0.19.2+1
+  carousel_slider:
+   git: https://github.com/serenader2014/flutter_carousel_slider
 
 
   # The following adds the Cupertino Icons font to your application.
